CORE-2350: HMKW Changes are made to reduce menu icon padding to avoid overlap on logo.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -449,6 +449,14 @@ header {
       }
     }
 
+    .mobile--menu {
+      padding-#{$right}: 0;
+
+      &::before {
+        margin-#{$right}: 0;
+      }
+    }
+
     .mobile--search {
       float: $right;
       margin-#{$right}: 1.0625rem;
